--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -2287,7 +2287,7 @@ THEMEFOREST REQUIRED CLASSES
   z-index: 100000;
 }
 /*-------------------------------------
-	Tabs 
+	Tabs
 -------------------------------------*/
 /*Tabs style 1 [ default ] */
 .wt-tabs .tab-pane {
@@ -3469,7 +3469,7 @@ button.scroltop {
   z-index: 999;
 }
 button.scroltop:hover {
-  
+
   background: #6da565;
 }
 
@@ -4581,8 +4581,8 @@ select {
   }
 }
 
-/*************************** 
-SIMPLE INNER SCROLLBAR 
+/***************************
+SIMPLE INNER SCROLLBAR
 **************************/
 
 .scrollbar-inner > .scroll-element,
@@ -7853,7 +7853,7 @@ body[class*="active-"] .cs-message-panel {
   left: 0px;
   width: 100%;
   height: 100%;
-  background-image: url("{{asset('assets/frontend/images/about-bg.png')}}");
+  background-image: url("/assets/frontend/images/about-bg.png");
 }
 
 .site-footer.footer-gradient {
@@ -8945,7 +8945,7 @@ body[class*="active-"] .cs-message-panel {
   margin: 0px;
 }
 .aon-photo-gallery {
-  background-image: url("{{asset('assets/frontend/images/gallery.jpg')}}");
+  background-image: url("/assets/frontend/images/gallery.jpg");
   height: 250px;
   border-radius: 10px;
   background-position: center;
@@ -8964,7 +8964,7 @@ body[class*="active-"] .cs-message-panel {
 }
 
 .aon-video-gallery {
-  background-image: url("{{asset('assets/frontend/images/video.jpg')}}");
+  background-image: url("/assets/frontend/images/video.jpg");
   height: 250px;
   border-radius: 10px;
   background-position: center;
@@ -9847,7 +9847,7 @@ body[class*="active-"] .cs-message-panel {
 
 .aon-med-appoint-area {
   padding: 90px 0px;
-  background-image: url("{{asset('assets/frontendmages/background/bg2.jpg')}}");
+  background-image: url("/assets/frontend/images/background/bg2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -10287,7 +10287,7 @@ body[class*="active-"] .cs-message-panel {
   top: 0px;
   left: 0px;
   position: absolute;
-  background-image: url("{{asset('assets/frontendmages/testimonial-img/left-lines.png')}}");
+  background-image: url("/assets/frontend/images/testimonial-img/left-lines.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -10389,7 +10389,7 @@ body[class*="active-"] .cs-message-panel {
   top: 0px;
   right: 0px;
   position: absolute;
-  background-image: url("{{asset('assets/frontendmages/testimonial-img/right-lines.png')}}");
+  background-image: url("/assets/frontend/images/testimonial-img/right-lines.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -10546,7 +10546,7 @@ body[class*="active-"] .cs-message-panel {
 /*Home page Two CSS*/
 .aon-banner2-wrap {
   background-color: #2c6c5e;
-  background-image: url("{{asset('assets/frontend/images/banner2/bg.jpg')}}");
+  background-image: url("/assets/frontend/images/banner2/bg.jpg");
   padding-top: 100px;
 }
 .aon-banner2-row {
@@ -10922,7 +10922,7 @@ body[class*="active-"] .cs-message-panel {
 
 .aon-med-appoint-area2 {
   padding: 10px 0px 0px 0px;
-  background-image: url("{{asset('assets/frontendimages/background/bg3.jpg')}}");
+  background-image: url("/assets/frontendimages/background/bg3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -11612,7 +11612,7 @@ body[class*="active-"] .cs-message-panel {
 }
 .aon-med-provider-mid-wrap {
   padding: 40px;
-  background-image: url("{{asset('assets/frontendmages/background/bg4.jpg')}}");
+  background-image: url("/assets/frontend/images/background/bg4.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -12014,7 +12014,7 @@ body[class*="active-"] .cs-message-panel {
   height: 100%;
 }
 .aon-page-benner-area {
-  background-image: url("{{asset('assets/frontendmages/banner/job-banner.jpg')}}");
+  background-image: url("/assets/frontend/images/banner/job-banner.jpg");
   position: relative;
 }
 .sf-banner-heading-wrap {
@@ -13831,7 +13831,7 @@ BLog Post Comment Section
 }
 .aon-login-left {
   background: #ddd;
-  background-image: url("{{asset('assets/frontend/images/banner2/bg.jpg')}}");
+  background-image: url("/assets/frontend/images/banner2/bg.jpg");
   background-size: cover;
   background-position: right center;
   width: calc(100% - 600px);
@@ -15083,7 +15083,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 
 /*-------------------------------------
 
-	 Loading 
+	 Loading
 
 -------------------------------------*/
 
@@ -15626,7 +15626,7 @@ div.dataTables_wrapper div.dataTables_filter input {
 .cssload-cupcakeInner,
 .cssload-cupcakeCore {
   border-radius: 50%;
-  background-image: url("{{asset('assets/frontend/images/wetaly/184.jpg')}}");
+  background-image: url("/assets/frontend/images/wetaly/184.jpg");
 
 }
 
@@ -15640,7 +15640,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   -ms-flex: none;
   -webkit-flex: none;
   -moz-flex: none;
-  background-image: url("{{asset('assets/frontend/images/wetaly/184.jpg')}}");
+  background-image: url("/assets/frontend/images/wetaly/184.jpg");
 }
 
 .cssload-letter,
@@ -15651,7 +15651,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   -ms-align-self: center;
   -webkit-align-self: center;
   -moz-align-self: center;
-  background-image: url("{{asset('assets/frontend/images/wetaly/184.jpg')}}");
+  background-image: url("/assets/frontend/images/wetaly/184.jpg");
 }
 
 .cssload-cupcakeCircle {
@@ -15668,7 +15668,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   height: 60px;
   width: 60px;
   background-color: #2733d5;
-  background-image: url("{{asset('assets/frontend/images/wetaly/184.jpg')}}");
+  background-image: url("/assets/frontend/images/wetaly/184.jpg");
 }
 
 .cssload-cupcakeInner {
@@ -16100,7 +16100,7 @@ div.dataTables_wrapper div.dataTables_filter input {
   display: flex;
   padding: 30px 10px;
   align-items: center;
-  background-image: url("{{asset('assets/frontend/images/commin-soon.jpg')}}");
+  background-image: url("/assets/frontend/images/commin-soon.jpg");
   background-position: center top;
 }
 .comming-soon-wrap .container {
@@ -17023,7 +17023,7 @@ Home page One CSS
 }
 .aon-title-line span {
   color: #2733d5;
-  background-image: url("{{asset('assets/frontend/images/text-line.png')}}");
+  background-image: url("/assets/frontend/images/text-line.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -18633,7 +18633,7 @@ Inner pages Css
   height: 100%;
 }
 .aon-page-benner-area2 {
-  background-image: url("{{asset('assets/frontendmages/inner-banner.jpg')}}");
+  background-image: url("/assets/frontend/images/inner-banner.jpg");
   position: relative;
   background-size: cover;
   background-position: center;
@@ -19137,7 +19137,7 @@ Inner pages Css
   right: 0px;
   bottom: 0px;
   position: absolute;
-  background-image: url("{{asset('assets/frontendmages/need-help-bg.png')}}");
+  background-image: url("/assets/frontend/images/need-help-bg.png");
   width: 124px;
   height: 212px;
 }
@@ -19579,7 +19579,7 @@ ol.comment-list li .children li {
 }
 
 /*========================
-Comment Form 
+Comment Form
 ==========================*/
 .comment-respond {
   margin-top: 50px;
@@ -20833,7 +20833,7 @@ section {
   height: 24px;
   margin-top: -24px;
   z-index: 1;
-  background-image: url("{{asset('assets/frontend/images/top-line.png')}}");
+  background-image: url("/assets/frontend/images/top-line.png");
   background-repeat: repeat-x;
 }
 .site-top-line2 {
@@ -20844,7 +20844,7 @@ section {
   height: 24px;
   margin-top: -24px;
   z-index: 1;
-  background-image: url("{{asset('assets/frontend/images/top-line2.png')}}");
+  background-image: url("/assets/frontend/images/top-line2.png");
   background-repeat: repeat-x;
 }
 .site-bot-line {
@@ -20855,7 +20855,7 @@ section {
   height: 24px;
   margin-bottom: -24px;
   z-index: 1;
-  background-image: url("{{asset('assets/frontend/images/bot-line.png')}}");
+  background-image: url("/assets/frontend/images/bot-line.png");
   background-repeat: repeat-x;
 }
 .site-bot-line2 {
@@ -20866,7 +20866,7 @@ section {
   height: 24px;
   margin-bottom: -24px;
   z-index: 1;
-  background-image: url("{{asset('assets/frontend/images/bot-line2.png')}}");
+  background-image: url("/assets/frontend/images/bot-line2.png");
   background-repeat: repeat-x;
 }
 
